--- a/web/src/pages/profile.astro
+++ b/web/src/pages/profile.astro
@@ -5,7 +5,7 @@ import Footer from '../components/Footer.astro';
 ---
 
 <script>
-	import { getCart, getWishlist } from '../lib/api.js';
+	import { getCart, getWishlist } from '../lib/api';
 	import '../lib/toast.js';
 
 	// Check authentication and redirect if not logged in
