--- a/web/src/pages/wishlist.astro
+++ b/web/src/pages/wishlist.astro
@@ -85,7 +85,7 @@ import Footer from '../components/Footer.astro';
 </Layout>
 
 <script>
-		import { getWishlist, removeFromWishlist } from '../lib/api.js';
+		import { getWishlist, removeFromWishlist } from '../lib/api';
 	import '../lib/toast.js';
 
 	// Wishlist functionality
