--- a/web/src/pages/cart.astro
+++ b/web/src/pages/cart.astro
@@ -214,7 +214,7 @@ import Footer from '../components/Footer.astro';
 	<Footer />
 
 	<script>
-	import { getCart, removeFromCart, addToCart, toggleWishlist } from '../lib/api.js';
+	import { getCart, removeFromCart, addToCart, toggleWishlist } from '../lib/api';
 	import '../lib/toast.js';
 
 	// Check authentication and redirect if not logged in
